--- a/.github/workflows/chroma.yml
+++ b/.github/workflows/chroma.yml
@@ -56,16 +56,9 @@ jobs:
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
         run: hatch run docs
 
-      - name: Start Chroma on Linux/macOS
-        if: runner.os != 'Windows'
-        run: |
-          hatch run chroma run &
-
-      - name: Start Chroma on Windows
-        if: runner.os == 'Windows'
-        shell: pwsh
-        run: |
-          Start-Process -NoNewWindow -FilePath "hatch" -ArgumentList "run chroma run"
+      - name: Run Chroma server on Linux/macOS
+        if: matrix.os != 'windows-latest'
+        run: hatch run chroma run &
 
       - name: Run tests
         run: hatch run cov-retry
