feat: Chroma - allow remote HTTP connection (#1094)
* add http client

* remove old code

* update order

* Apply suggestions from code review

Co-authored-by: Stefano Fiorucci <stefanofiorucci@gmail.com>

* add testcases

* run chroma db in the bg

* fix line too long

* fix testcase

* support chroma bg on windows

* fix chroma on win

* chroma fix for powershell on win

* simplification

* fix wrong skipif

* linting

---------

Co-authored-by: Stefano Fiorucci <stefanofiorucci@gmail.com>

--- a/.github/workflows/chroma.yml
+++ b/.github/workflows/chroma.yml
@@ -56,6 +56,10 @@ jobs:
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
         run: hatch run docs
 
+      - name: Run Chroma server on Linux/macOS
+        if: matrix.os != 'windows-latest'
+        run: hatch run chroma run &
+
       - name: Run tests
         run: hatch run cov-retry
 
