--- a/integrations/astra/pyproject.toml
+++ b/integrations/astra/pyproject.toml
@@ -78,7 +78,9 @@ skip-string-normalization = true
 [tool.ruff]
 target-version = "py38"
 line-length = 120
-lint.select = [
+
+[tool.ruff.lint]
+select = [
   "A",
   "ARG",
   "B",
@@ -105,7 +107,7 @@ lint.select = [
   "W",
   "YTT",
 ]
-lint.ignore = [
+ignore = [
   # Allow non-abstract empty methods in abstract base classes
   "B027",
   # Allow boolean positional values in function calls, like `dict.get(... True)`
@@ -121,11 +123,11 @@ lint.ignore = [
   "PLR0913",
   "PLR0915",
 ]
-lint.unfixable = [
+unfixable = [
   # Don't touch unused imports
   "F401",
 ]
-lint.exclude = ["example"]
+exclude = ["example"]
 
 [tool.ruff.lint.isort]
 known-first-party = ["haystack_integrations"]
