--- a/integrations/ragas/pyproject.toml
+++ b/integrations/ragas/pyproject.toml
@@ -77,6 +77,9 @@ skip-string-normalization = true
 [tool.ruff]
 target-version = "py38"
 line-length = 120
+extend-exclude = ["tests", "example"]
+
+[tool.ruff.lint]
 select = [
   "A",
   "ARG",
@@ -128,7 +131,6 @@ unfixable = [
   # Don't touch unused imports
   "F401",
 ]
-extend-exclude = ["tests", "example"]
 
 [tool.ruff.lint.isort]
 known-first-party = ["src"]
