--- a/integrations/snowflake/pyproject.toml
+++ b/integrations/snowflake/pyproject.toml
@@ -126,7 +126,7 @@ unfixable = [
 ]
 
 [tool.ruff.lint.isort]
-known-first-party = ["snowflake_haystack"]
+known-first-party = ["haystack_integrations"]
 
 [tool.ruff.lint.flake8-tidy-imports]
 ban-relative-imports = "parents"
