--- a/integrations/ollama/pyproject.toml
+++ b/integrations/ollama/pyproject.toml
@@ -79,7 +79,7 @@ all = ["style", "typing"]
 allow-direct-references = true
 
 [tool.ruff.lint.isort]
-known-first-party = ["src"]
+known-first-party = ["haystack_integrations"]
 
 [tool.black]
 target-version = ["py38"]
