--- a/integrations/ragas/pyproject.toml
+++ b/integrations/ragas/pyproject.toml
@@ -77,7 +77,7 @@ skip-string-normalization = true
 [tool.ruff]
 target-version = "py38"
 line-length = 120
-extend-exclude = ["tests", "example"]
+exclude = ["example", "tests"]
 
 [tool.ruff.lint]
 select = [
