--- a/integrations/instructor_embedders/pyproject.toml
+++ b/integrations/instructor_embedders/pyproject.toml
@@ -155,7 +155,7 @@ unfixable = [
 ]
 
 [tool.ruff.lint.isort]
-known-first-party = ["instructor_embedders"]
+known-first-party = ["haystack_integrations"]
 
 [tool.ruff.lint.flake8-tidy-imports]
 ban-relative-imports = "parents"
