--- a/integrations/unstructured/pyproject.toml
+++ b/integrations/unstructured/pyproject.toml
@@ -40,6 +40,7 @@ root = "../.."
 git_describe_command = 'git describe --tags --match="integrations/unstructured-v[0-9]*"'
 
 [tool.hatch.envs.default]
+installer = "uv"
 dependencies = [
   "coverage[toml]>=6.5",
   "pytest",
@@ -60,6 +61,7 @@ docs = ["pydoc-markdown pydoc/config.yml"]
 python = ["3.9", "3.10", "3.11"]
 
 [tool.hatch.envs.lint]
+installer = "uv"
 detached = true
 dependencies = ["black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]
 [tool.hatch.envs.lint.scripts]
