fix docs generation

--- a/integrations/unstructured/pyproject.toml
+++ b/integrations/unstructured/pyproject.toml
@@ -42,6 +42,7 @@ git_describe_command = 'git describe --tags --match="integrations/unstructured-v
 [tool.hatch.envs.default]
 installer = "uv"
 dependencies = [
+  "setuptools",
   "coverage[toml]>=6.5",
   "pytest",
   "pytest-rerunfailures",
