--- a/integrations/amazon_bedrock/pyproject.toml
+++ b/integrations/amazon_bedrock/pyproject.toml
@@ -44,6 +44,7 @@ git_describe_command = 'git describe --tags --match="integrations/amazon_bedrock
 [tool.hatch.envs.default]
 installer = "uv"
 dependencies = [
+  "setuptools",
   "coverage[toml]>=6.5",
   "pytest",
   "pytest-rerunfailures",
