--- a/integrations/amazon_sagemaker/pyproject.toml
+++ b/integrations/amazon_sagemaker/pyproject.toml
@@ -47,6 +47,7 @@ git_describe_command = 'git describe --tags --match="integrations/amazon_sagemak
 [tool.hatch.envs.default]
 installer = "uv"
 dependencies = [
+  "setuptools",
   "coverage[toml]>=6.5",
   "pytest",
   "pytest-rerunfailures",
