--- a/integrations/chroma/pyproject.toml
+++ b/integrations/chroma/pyproject.toml
@@ -43,6 +43,7 @@ git_describe_command = 'git describe --tags --match="integrations/chroma-v[0-9]*
 [tool.hatch.envs.default]
 installer = "uv"
 dependencies = [
+  "setuptools",
   "coverage[toml]>=6.5",
   "pytest",
   "pytest-rerunfailures",
