--- a/integrations/ollama/pyproject.toml
+++ b/integrations/ollama/pyproject.toml
@@ -48,6 +48,7 @@ git_describe_command = 'git describe --tags --match="integrations/ollama-v[0-9]*
 [tool.hatch.envs.default]
 installer = "uv"
 dependencies = [
+  "setuptools",
     "coverage[toml]>=6.5",
     "pytest",
     "pytest-rerunfailures",
