--- a/integrations/optimum/pyproject.toml
+++ b/integrations/optimum/pyproject.toml
@@ -56,6 +56,7 @@ git_describe_command = 'git describe --tags --match="integrations/optimum-v[0-9]
 [tool.hatch.envs.default]
 installer = "uv"
 dependencies = [
+  "setuptools",
   "coverage[toml]>=6.5",
   "pytest",
   "pytest-rerunfailures",
