--- a/integrations/deepeval/pyproject.toml
+++ b/integrations/deepeval/pyproject.toml
@@ -42,8 +42,7 @@ git_describe_command = 'git describe --tags --match="integrations/deepeval-v[0-9
 
 [tool.hatch.envs.default]
 installer = "uv"
-dependencies = [
-  "setuptools","coverage[toml]>=6.5", "pytest", "pytest-rerunfailures", "haystack-pydoc-tools"]
+dependencies = ["coverage[toml]>=6.5", "pytest", "pytest-rerunfailures", "haystack-pydoc-tools"]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
 test-cov = "coverage run -m pytest {args:tests}"
