--- a/.github/workflows/qdrant.yml
+++ b/.github/workflows/qdrant.yml
@@ -60,7 +60,7 @@ jobs:
         run: hatch run cov-retry
 
       - name: Nightly - run unit tests with Haystack main branch
-        # if: github.event_name == 'schedule'
+        if: github.event_name == 'schedule'
         run: |
           hatch run pip install git+https://github.com/deepset-ai/haystack.git
           hatch run cov-retry -m "not integration"
