--- a/integrations/instructor_embedders/pyproject.toml
+++ b/integrations/instructor_embedders/pyproject.toml
@@ -30,18 +30,17 @@ dependencies = [
   # Commenting some of them to not interfere with the dependencies of Haystack.
   #"transformers==4.20.0",
   "datasets>=2.2.0",
-  "huggingface_hub<0.26.0",
+  "huggingface_hub",
   #"pyarrow==8.0.0",
   "jsonlines",
   "numpy",
   "requests>=2.26.0",
   "scikit_learn>=1.0.2",
   "scipy",
-  "sentence_transformers>=2.2.0,<2.3.0",
+  "sentence_transformers>=2.2.0",
   "torch",
   "tqdm",
   "rich",
-
   "InstructorEmbedding",
 ]
 
