--- a/integrations/fastembed/pydoc/config.yml
+++ b/integrations/fastembed/pydoc/config.yml
@@ -6,7 +6,8 @@ loaders:
         "haystack_integrations.components.embedders.fastembed.fastembed_document_embedder",
         "haystack_integrations.components.embedders.fastembed.fastembed_text_embedder",
         "haystack_integrations.components.embedders.fastembed.fastembed_sparse_document_embedder",
-        "haystack_integrations.components.embedders.fastembed.fastembed_sparse_text_embedder"
+        "haystack_integrations.components.embedders.fastembed.fastembed_sparse_text_embedder",
+        "haystack_integrations.components.rankers.fastembed.ranker"
       ]
     ignore_when_discovered: ["__init__"]
 processors:
